text area completed

--- a/RealTimeCharactersCounter/index.html
+++ b/RealTimeCharactersCounter/index.html
@@ -8,7 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h2> Real-Time Character Counter</h2>
+        <h2>
+            <textarea  id="textarea" class="textarea" placeholder="Write your text here....." maxlength="50">
+
+            </textarea>
+            <div class="counter-container">
+                <p>
+                    Total Characters: <span class="total-counter" id="total-counter">
+                        12
+                    </span>
+                </p>
+                <p>
+                    Remaining Characters: <span class="remaining-counter" id="remaining counter">
+                        34
+                    </span>
+                </p>
+            </div>
+
+        </h2>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
