--- a/RealTimeCharactersCounter/index.html
+++ b/RealTimeCharactersCounter/index.html
@@ -11,9 +11,7 @@
     <div class="container">
         <h2> Real-Time Character Counter</h2>
         <h2>
-            <textarea  id="textarea" class="textarea" placeholder="Write your text here....." maxlength="50">
-
-            </textarea>
+            <textarea  id="textarea" class="textarea" placeholder="Write your text here....." maxlength="50"></textarea>
             <div class="counter-container">
                 <p>
                     Total Characters: <span class="total-counter" id="total-counter">
@@ -21,7 +19,7 @@
                     </span>
                 </p>
                 <p>
-                    Remaining Characters: <span class="remaining-counter" id="remaining counter">
+                    Remaining Characters: <span class="remaining-counter" id="remaining-counter">
                         34
                     </span>
                 </p>
