Sticky Navbar Js completed - Project completed

--- a/Sticky-Navbar/index.html
+++ b/Sticky-Navbar/index.html
@@ -30,5 +30,6 @@
         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis accusantium quae nihil ab aspernatur! Deleniti amet, officia quos iure veritatis sint nesciunt dignissimos temporibus omnis, quidem nam impedit illum delectus atque. Laboriosam quasi esse illum qui, nisi nemo quis odio aliquid, fugiat neque, excepturi aliquam. Ipsum ipsam dolores voluptas repellendus error harum, nam cum ea, autem impedit reprehenderit in. Dolorem delectus qui reiciendis quidem laboriosam at ipsam, culpa iste soluta quia iure neque aut, dignissimos in magnam magni tempora repellat odio quod quibusdam cupiditate. Nam hic dicta officia quod suscipit, asperiores voluptates, error delectus fugiat corrupti placeat autem ratione! Iste!</p>
 
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
