--- a/RandomColorGenerator/index.html
+++ b/RandomColorGenerator/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Random Color Generator</h1>
-    <div>
+    <div class="container">
         <div class="color-container">#7046a3</div>
         <div class="color-container">#7046a3</div>
         <div class="color-container">#7046a3</div>
