Random Color Generated completed

--- a/RandomColorGenerator/index.html
+++ b/RandomColorGenerator/index.html
@@ -10,13 +10,7 @@
 <body>
     <h1>Random Color Generator</h1>
     <div class="container">
-        <div class="color-container">#7046a3</div>
-        <div class="color-container">#7046a3</div>
-        <div class="color-container">#7046a3</div>
-        <div class="color-container">#7046a3</div>
-        <div class="color-container">#7046a3</div>
-
     </div>
-    
+    <script src="index.js"></script>
 </body>
 </html>
