HTML of video popup project completed

--- a/video-popup/index.html
+++ b/video-popup/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video-Popup</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="main-container">
+        <img src="https://images.pexels.com/photos/14648199/
+        pexels-photo-14648199.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="movie-image">
+        <h2>Movie Title</h2>
+        <p>Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Tenetur accusantium dolorem ut doloremque neque, quasi expedita et. Tenetur ex iure doloremque, totam quos nesciunt, dolor
+            assumenda veritatis dolores perspiciatis veniam!</p>
+            <button class="btn">Watch Now!</button>
+        </div>
+        <div class="trailer-container">
+            <video src="trailer.mp4" controls></video>
+            <i class="fas fa-times fa-1.5x"></i>
+        </div>
     <script src="index.js"></script>
 </body>
 </html>
