--- a/video-popup/index.html
+++ b/video-popup/index.html
@@ -11,9 +11,8 @@
 </head>
 <body>
     <div class="main-container">
-        <img src="https://images.pexels.com/photos/14648199/
-        pexels-photo-14648199.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="movie-image">
-        <h2>Movie Title</h2>
+        <img src="https://images.pexels.com/photos/3998365/pexels-photo-3998365.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="movie-image">
+        <h2>Romeo Juliet</h2>
         <p>Lorem ipsum dolor sit amet consectetur 
             adipisicing elit. Tenetur accusantium dolorem ut doloremque neque, quasi expedita et. Tenetur ex iure doloremque, totam quos nesciunt, dolor
             assumenda veritatis dolores perspiciatis veniam!</p>
@@ -21,7 +20,7 @@
         </div>
         <div class="trailer-container">
             <video src="trailer.mp4" controls></video>
-            <i class="fas fa-times fa-1.5x"></i>
+            <i class="fas fa-times fa-1.5x close-icon"></i>
         </div>
     <script src="index.js"></script>
 </body>
