Video pop-up Project Completed

--- a/video-popup/index.html
+++ b/video-popup/index.html
@@ -18,7 +18,7 @@
             assumenda veritatis dolores perspiciatis veniam!</p>
             <button class="btn">Watch Now!</button>
         </div>
-        <div class="trailer-container">
+        <div class="trailer-container active">
             <video src="trailer.mp4" controls></video>
             <i class="fas fa-times fa-1.5x close-icon"></i>
         </div>
