--- a/BlurBackground-PopUp/index.html
+++ b/BlurBackground-PopUp/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1> Priyanshu Academia</h1>
+        <button class="btn">Enroll</button>
+    </div>
+    <div class="popup">
+        <h4> 20% off on all courses</h4>
+        <label for="email">email</label>
+        <input type="email" name="email" class="input" placeholder="Enter you mail">
+        <button class="btn">join</button>
+        <div class="close-icon">
+            <i class="fas fa-times fa-1.9x"></i>
+
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
