--- a/BlurBackground-PopUp/index.html
+++ b/BlurBackground-PopUp/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container active">
         <h1> Priyanshu Academia</h1>
         <button class="btn">Enroll</button>
     </div>
-    <div class="popup">
+    <div class="popup-container">
         <h4> 20% off on all courses</h4>
         <label for="email">email</label>
         <input type="email" name="email" class="input" placeholder="Enter you mail">
