HTML part  completed

--- a/ImageScrollEffect/index.html
+++ b/ImageScrollEffect/index.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background Image Scroll Effect</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="bg-image" id="bg-image"></div>
+    <div class="container"><h1>Initiatives for Girls in Physics and Tech</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Suscipit hic, inventore ad accusantium veritatis perferendis iure dicta numquam eius, rerum soluta eos recusandae iusto aperiam ex esse facilis consectetur. 
+            Quasi neque harum nobis, repellendus officia architecto necessitatibus esse dolorum maiores sunt tenetur modi eos possimus odio expedita laborum, impedit numquam?
+            Accusamus explicabo quasi, obcaecati aut laborum alias quas cumque, necessitatibus illo eum nisi expedita voluptatem ad iure aperiam omnis, 
+            dicta porro illum exercitationem vel inventore? Enim ad animi soluta iure dignissimos repellat ratione totam sunt! Iure ea, quae, ducimus assumenda repudiandae ipsum dolorum fugiat aliquam officiis necessitatibus minus totam possimus!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Suscipit hic, inventore ad accusantium veritatis perferendis iure dicta numquam eius, rerum soluta eos recusandae iusto aperiam ex esse facilis consectetur. 
+            Quasi neque harum nobis, repellendus officia architecto necessitatibus esse dolorum maiores sunt tenetur modi eos possimus odio expedita laborum, impedit numquam?
+            Accusamus explicabo quasi, obcaecati aut laborum alias quas cumque, necessitatibus illo eum nisi expedita voluptatem ad iure aperiam omnis, 
+            dicta porro illum exercitationem vel inventore? Enim ad animi soluta iure dignissimos repellat ratione totam sunt! Iure ea, quae, ducimus assumenda repudiandae ipsum dolorum fugiat aliquam officiis necessitatibus minus totam possimus!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Suscipit hic, inventore ad accusantium veritatis perferendis iure dicta numquam eius, rerum soluta eos recusandae iusto aperiam ex esse facilis consectetur. 
+            Quasi neque harum nobis, repellendus officia architecto necessitatibus esse dolorum maiores sunt tenetur modi eos possimus odio expedita laborum, impedit numquam?
+            Accusamus explicabo quasi, obcaecati aut laborum alias quas cumque, necessitatibus illo eum nisi expedita voluptatem ad iure aperiam omnis, 
+            dicta porro illum exercitationem vel inventore? Enim ad animi soluta iure dignissimos repellat ratione totam sunt! Iure ea, quae, ducimus assumenda repudiandae ipsum dolorum fugiat aliquam officiis necessitatibus minus totam possimus!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Suscipit hic, inventore ad accusantium veritatis perferendis iure dicta numquam eius, rerum soluta eos recusandae iusto aperiam ex esse facilis consectetur. 
+            Quasi neque harum nobis, repellendus officia architecto necessitatibus esse dolorum maiores sunt tenetur modi eos possimus odio expedita laborum, impedit numquam?
+            Accusamus explicabo quasi, obcaecati aut laborum alias quas cumque, necessitatibus illo eum nisi expedita voluptatem ad iure aperiam omnis, 
+            dicta porro illum exercitationem vel inventore? Enim ad animi soluta iure dignissimos repellat ratione totam sunt! Iure ea, quae, ducimus assumenda repudiandae ipsum dolorum fugiat aliquam officiis necessitatibus minus totam possimus!
+        </p>
+    </div>
+
 </body>
 </html>
