Project scroll effect completed

--- a/ImageScrollEffect/index.html
+++ b/ImageScrollEffect/index.html
@@ -39,6 +39,6 @@
             dicta porro illum exercitationem vel inventore? Enim ad animi soluta iure dignissimos repellat ratione totam sunt! Iure ea, quae, ducimus assumenda repudiandae ipsum dolorum fugiat aliquam officiis necessitatibus minus totam possimus!
         </p>
     </div>
-
+<script src="index.js"></script>
 </body>
 </html>
