HTML part completed

--- a/InstrumentSounds/index.html
+++ b/InstrumentSounds/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instrument Sounds</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Instrument Sounds</h2>
+    <h2>Drum Kits     <i class="fa-solid fa-drum"></i>
+    </h2>
+    <div class="container"><button class="btn" >Snare </button></div>
+    <div class="container"><button class="btn" >Kick </button></div>
+    <div class="container"><button class="btn" >Crash </button></div>
+    <div class="container"><button class="btn" >Tom </button></div>
     <script src="index.js"></script>
 </body>
 </html> 
