--- a/InstrumentSounds/index.html
+++ b/InstrumentSounds/index.html
@@ -12,10 +12,12 @@
 <body>
     <h2>Drum Kits     <i class="fa-solid fa-drum"></i>
     </h2>
-    <div class="container"><button class="btn" >Snare </button></div>
-    <div class="container"><button class="btn" >Kick </button></div>
-    <div class="container"><button class="btn" >Crash </button></div>
-    <div class="container"><button class="btn" >Tom </button></div>
+    <div class="container">
+        <button class="btn" >Cow</button>
+        <button class="btn" >Horse </button>
+        <button class="btn" >Cat</button>
+        <button class="btn" >Dog</button>
+    </div>
     <script src="index.js"></script>
 </body>
 </html> 
