--- a/InstrumentSounds/index.html
+++ b/InstrumentSounds/index.html
@@ -13,10 +13,10 @@
     <h2>Drum Kits     <i class="fa-solid fa-drum"></i>
     </h2>
     <div class="container">
-        <button class="btn" >Cow</button>
+        <!-- <button class="btn" >Cow</button>
         <button class="btn" >Horse </button>
         <button class="btn" >Cat</button>
-        <button class="btn" >Dog</button>
+        <button class="btn" >Dog</button> -->
     </div>
     <script src="index.js"></script>
 </body>
