--- a/Random Image Generator/index.html
+++ b/Random Image Generator/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Image Generator</title>
+    <title>Random Image </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="image-container">
+        <img src="https://picsum.photos/300?random=1">
+<img src="https://picsum.photos/300?random=2">
+<img src="https://picsum.photos/300?random=3">
+
+    </div>
+    <button class="btn">Load More</button>
     <script src="index.js"></script>
 </body>
 </html>
