--- a/Random Image Generator/index.html
+++ b/Random Image Generator/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Image </title>
+    <title>Random Image Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   
     <div class="image-container">
         <img src="https://picsum.photos/300?random=1">
 <img src="https://picsum.photos/300?random=2">
 <img src="https://picsum.photos/300?random=3">
+<img src="https://picsum.photos/300?random=23">
+<img src="https://picsum.photos/300?random=31">
+<img src="https://picsum.photos/300?random=12">
+<img src="https://picsum.photos/300?random=63">
 
     </div>
     <button class="btn">Load More</button>
