--- a/Image_Slider/index.html
+++ b/Image_Slider/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="slideImg_container">
+        <img src="https://picsum.photos/500/350?random=1" alt="image">
+        <img src="https://picsum.photos/500/350?random=2"alt="image">
+        <img src="https://picsum.photos/500/350?random=3"alt="image">
+        <img src="https://picsum.photos/500/350?random=4"alt="image">
+        <img src="https://picsum.photos/500/350?random=5"alt="image">
+
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
