--- a/Image_Slider/index.html
+++ b/Image_Slider/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Slider</title>
+    <title>Image Slider</title>    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="slideImg_container">
-        <img src="https://picsum.photos/500/350?random=1" alt="image">
-        <img src="https://picsum.photos/500/350?random=2"alt="image">
-        <img src="https://picsum.photos/500/350?random=3"alt="image">
-        <img src="https://picsum.photos/500/350?random=4"alt="image">
-        <img src="https://picsum.photos/500/350?random=5"alt="image">
-
+    <div class="slider_container">
+        <div class="image_container">
+            <img src="https://picsum.photos/500/350?random=1" alt="image">
+            <img src="https://picsum.photos/500/350?random=2"alt="image">
+            <img src="https://picsum.photos/500/350?random=3"alt="image">
+            <img src="https://picsum.photos/500/350?random=4"alt="image">
+            <img src="https://picsum.photos/500/350?random=5"alt="image">
+    
+        </div>
+        <i class="fa-regular fa-chevrons-right"></i>
     </div>
+  
     <script src="index.js"></script>
 </body>
 </html>
