icon problem solved

--- a/Image_Slider/index.html
+++ b/Image_Slider/index.html
@@ -19,7 +19,7 @@
             <img src="https://picsum.photos/500/350?random=5"alt="image">
     
         </div>
-        <i class="fa-regular fa-chevrons-right"></i>
+        <i class="fas fa-angle-double-right fa-1.9x"></i>
     </div>
   
     <script src="index.js"></script>
