CSS of the project completed

--- a/Image_Slider/index.html
+++ b/Image_Slider/index.html
@@ -19,7 +19,9 @@
             <img src="https://picsum.photos/500/350?random=5"alt="image">
     
         </div>
-        <i class="fas fa-angle-double-right fa-1.9x"></i>
+        <i class="fas fa-angle-double-left fa-1.9x btn prev"></i>
+        <i class="fas fa-angle-double-right fa-1.9x btn next"></i>
+
     </div>
   
     <script src="index.js"></script>
