--- a/DarkModeToggle/index.html
+++ b/DarkModeToggle/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <input type="checkbox" id="dark-mode" class="input">
+<label for="dark-mode">
+    <div class="circle"></div>
+</label>    
     <script src="index.js"></script>
 </body>
 </html>
