--- a/AutoTextEffect/index.html
+++ b/AutoTextEffect/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="container">
+        <div class="bg-image" id="bg-image"></div>
+
         <h1>
             I am a Data Science Enthusiast.
         </h1>
