Functionality added to the project

--- a/AutoTextEffect/index.html
+++ b/AutoTextEffect/index.html
@@ -11,9 +11,8 @@
     <div class="container">
         <div class="bg-image" id="bg-image"></div>
 
-        <h1>
-            I am a Data Science Enthusiast.
-        </h1>
+        
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
