HTML part completed

--- a/Tabs Section/index.html
+++ b/Tabs Section/index.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="section-center">
+        <div class="image">
+            <img src="https://images.pexels.com/photos/39853/woman-girl-freedom-happy-39853.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+        </div>
+        <div class="tabs">
+            <button class="button">Step 1</button>
+            <button class="button">Step 2</button>
+            <button class="button">Step 3</button>
+
+        </div>
+        <div class="tabs-content">
+            <div class="content">
+                <h3>
+                    Step 1
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus excepturi praesentium voluptatem odit eos! Nulla in nemo tenetur magnam, modi aut temporibus suscipit, perspiciatis eos a omnis veritatis eaque incidunt?</p>
+            </div>
+            <div class="content">
+                <h3>
+                    Step 2
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus excepturi praesentium voluptatem odit eos! Nulla in nemo tenetur magnam, modi aut temporibus suscipit, perspiciatis eos a omnis veritatis eaque incidunt?</p>
+            </div>
+            <div class="content">
+                <h3>
+                    Step 3
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus excepturi praesentium voluptatem odit eos! Nulla in nemo tenetur magnam, modi aut temporibus suscipit, perspiciatis eos a omnis veritatis eaque incidunt?</p>
+            </div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
