CSS part completed

--- a/Tabs Section/index.html
+++ b/Tabs Section/index.html
@@ -13,9 +13,12 @@
             <img src="https://images.pexels.com/photos/39853/woman-girl-freedom-happy-39853.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
         </div>
         <div class="tabs">
-            <button class="button">Step 1</button>
-            <button class="button">Step 2</button>
-            <button class="button">Step 3</button>
+            <div class="btn-container">
+                <button class="button">Step 1</button>
+                <button class="button">Step 2</button>
+                <button class="button">Step 3</button>
+            </div>
+           
 
         </div>
         <div class="tabs-content">
