Javascript part completed

--- a/Tabs Section/index.html
+++ b/Tabs Section/index.html
@@ -14,27 +14,27 @@
         </div>
         <div class="tabs">
             <div class="btn-container">
-                <button class="button">Step 1</button>
-                <button class="button">Step 2</button>
-                <button class="button">Step 3</button>
+                <button class="button" data-id="step1">Step 1</button>
+                <button class="button"data-id="step2">Step 2</button>
+                <button class="button"data-id="step3">Step 3</button>
             </div>
            
 
         </div>
         <div class="tabs-content">
-            <div class="content">
+            <div class="content" id="step1">
                 <h3>
                     Step 1
                 </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus excepturi praesentium voluptatem odit eos! Nulla in nemo tenetur magnam, modi aut temporibus suscipit, perspiciatis eos a omnis veritatis eaque incidunt?</p>
             </div>
-            <div class="content">
+            <div class="content" id="step2">
                 <h3>
                     Step 2
                 </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus excepturi praesentium voluptatem odit eos! Nulla in nemo tenetur magnam, modi aut temporibus suscipit, perspiciatis eos a omnis veritatis eaque incidunt?</p>
             </div>
-            <div class="content">
+            <div class="content" id="step3">
                 <h3>
                     Step 3
                 </h3>
